# eran.codes

./: .dockerignore  .env  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  bacon.toml  bon.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
.sqlx/: query-5a7587f5337f49e596449d207227c932ab752cc280d845f5a146ee2b5de31bfb.json
crates/app/: Cargo.toml  README.md
crates/app/src/: README.md  auth.rs  error.rs  lib.rs
crates/app/src/chat/: README.md  error.rs  mod.rs
crates/app/src/user/: README.md  error.rs  mod.rs
crates/domain/: Cargo.toml  README.md
crates/domain/src/: README.md  error.rs  lib.rs
crates/domain/src/chat/: README.md  error.rs  message.rs  mod.rs  room.rs
crates/domain/src/user/: README.md  error.rs  mod.rs  model.rs  new_user.rs  repo.rs  user.rs
crates/http/: Cargo.toml  README.md
crates/http/src/: README.md  auth.rs  chat_demo.rs  error.rs  handlers.rs  lib.rs  paths.rs  request.rs  router.rs  state.rs  trace.rs  trace_log.rs  types.rs
crates/http/src/extract/: hx.rs  mod.rs
crates/http/src/handlers/: README.md  auth.rs  mod.rs  pages.rs  partials.rs  sse.rs
crates/http/src/handlers/demo/: README.md  chat.rs  mod.rs  partials.rs
crates/http/src/respond/: html.rs  mod.rs
crates/http/src/router/: README.md  layers.rs  mod.rs  routes.rs
crates/http/src/routes/: home.rs  users.rs
crates/http/src/sse/: README.md  mod.rs  session.rs
crates/http/src/views/: README.md  components.rs  layout.rs  mod.rs  page.rs  users.rs
crates/http/src/views/fragments/: user_row.rs
crates/http/src/views/pages/: README.md  chat.rs  chat_moderation.rs  home.rs  login.rs  mod.rs  protected.rs  register.rs
crates/http/src/views/partials/: README.md  auth_status.rs  boundary_check.rs  db_check.rs  error.rs  live_log.rs  mod.rs  network_log.rs  ping.rs  request_meta.rs  session_status.rs  trace_log.rs
crates/http/src/views/partials/components/: mod.rs
crates/http/src/views/partials/demo/: auth_status.rs  boundary_check.rs  chat_demo_section.rs  chat_flow.rs  chat_hero.rs  chat_message.rs  chat_panel.rs  chat_window.rs  data_table.rs  db_check.rs  demo_result.rs  field_value.rs  home_hero.rs  key_value_list.rs  live_log.rs  log_panel.rs  mod.rs  moderation_action.rs  network_log.rs  pill.rs  ping.rs  request_meta.rs  section_header.rs  session_status.rs  status_card.rs  trace_log.rs
crates/http/src/views/partials/demo/chat/: chat_connection.rs  chat_demo_section.rs  chat_message.rs  chat_panel.rs  chat_window.rs  mod.rs
crates/http/src/views/partials/demo/layout/: cta_row.rs  demo_result.rs  demo_section.rs  feature_gallery.rs  flow_map.rs  highlights_section.rs  home_hero.rs  mod.rs  section_header.rs  support_card.rs
crates/http/src/views/partials/demo/log/: chat_flow.rs  data_table.rs  empty_state.rs  field_value.rs  live_log.rs  log_panel.rs  log_row.rs  mod.rs  network_log.rs  trace_log.rs
crates/http/src/views/partials/demo/misc/: mod.rs  moderation_action.rs  pill.rs
crates/http/src/views/partials/demo/support/: auth_status.rs  boundary_check.rs  db_check.rs  key_value_list.rs  mod.rs  request_meta.rs  session_status.rs  status_card.rs
crates/http/static/: app.css  css-scope-inline.js  surreal.js
crates/http/tests/: auth_redirect.rs  home_demos.rs
crates/infra/: Cargo.toml  README.md
crates/infra/migrations/: 001_users.up.sql  002_users.up.sql  003_credentials.up.sql  004_sessions.down.sql  005_chat.down.sql  005_chat.up.sql  006_chat_room_name_unique.down.sql  006_chat_room_name_unique.up.sql
crates/infra/src/: README.md  auth.rs  chat.rs  config.rs  error.rs  lib.rs
crates/infra/src/repo/: README.md  chat.rs  mod.rs  user.rs
crates/maud_extensions/: Cargo.toml  README.md
crates/maud_extensions/src/: lib.rs
crates/maud_extensions_macros/: Cargo.toml  README.md
crates/maud_extensions_macros/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: error.rs  user.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: README.md  b64.rs  envs.rs
database/: Cargo.toml  build.rs
database/migrations/: 20230602220201_technologies.down.sql  20230602220201_technologies.up.sql
database/src/: lib.rs
database/src/schema/: customer.rs  mod.rs  order.rs  product.rs
docs/: auth-sessions.md  componentization-audit.md  componentization-followup.md  datastar-backend-requests.md  datastar-expressions.md  datastar-signals.md  datastar-tao.md  portfolio-demos-plan.md  portfolio-demos.md  stringy-checks-audit.md  tracing.md  views-audit.md
http_server/: .dockerignore  Cargo.toml  Dockerfile
http_server/src/: main.rs
scripts/ci/: no-string-fields.sh  partials-render.sh  stringy-check.sh
src/: app_state.rs  config.rs  error.rs  main.rs
tonic_api/: Cargo.toml  Dockerfile
tonic_api/src/: main.rs
web-folder/static/: invoice.html  signature.html
