[package]
name = "eran_codes"
version = "0.1.0"
edition = "2024"
default-run = "eran_codes"

[workspace]

members = [
    "crates/domain",
    "crates/infra",
    "crates/app",
    "crates/http",
    "crates/maud_extensions_macros",
    "crates/utils",
]

[dependencies]
infra = { path = "crates/infra" }
domain = { path = "crates/domain" }
app = { path = "crates/app" }
http = { path = "crates/http" }
utils = { path = "crates/utils" }


tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "fs",
] }
axum = { version = "0.8.8" }

derive_more = "2.1.0"

[workspace.dependencies]
nutype = "0.6.2"

[workspace.metadata.scripts]
migrate = "cargo with-db sqlx migrate run --source crates/infra/migrations"
prepare = "cargo with-db sqlx prepare --workspace -- --all-targets"
b = "bacon run ."
w = "cargo watch -c -q -x 'run'"
