[package]
name = "eran_codes"
version = "0.1.0"
edition = "2024"
default-run = "eran_codes"

[workspace]

members = [
    "crates/domain",
    "crates/infra",
    "crates/app",
    "crates/http",
    "crates/utils",
]

[dependencies]
infra = { path = "crates/infra" }
domain = { path = "crates/domain" }
app = { path = "crates/app" }
http = { path = "crates/http" }
utils = { path = "crates/utils" }
nutype = { workspace = true }


tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "fs",
] }
axum = { version = "0.8.8" }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tower-sessions = "0.14.0"
tower-cookies = "0.11.0"

derive_more = "2.1.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = "0.1.44"

[workspace.dependencies]
nutype = "0.6.2"
moddef = "0.3.0"
strum = "0.26.3"
strum_macros = "0.26.4"

[workspace.metadata.scripts]
crs = "cargo run-script"
migrate = "cargo with-db sqlx migrate run --source crates/infra/migrations"
prepare = "cargo with-db sqlx prepare --workspace -- --all-targets"
w = "watchexec --restart --exts rs,html,css,js -- cargo run --features http/live-reload"
