[package]
name = "database"
version = "0.1.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.7.0-alpha.3", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
