[package]
name = "database"
version = "0.1.0"
edition = "2021"

# [profile.dev.package.sqlx-macros]
# opt-level = 3

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.7.0-alpha.3", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
