[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
nutype = { workspace = true }
derive_more = { version = "2.1.0", features = ["from"] }
bon = { version = "3.8.1", features = [
  "experimental-overwritable",
  "experimental-getter",
  "implied-bounds",
] }
moddef = { workspace = true }
uuid = { version = "1.12.1", features = ["v4"] }
