[package]
name = "http"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app" }
serde = { version = "1.0.228", features = ["derive"] }
derive_more = "2.1.1"
tracing = "0.1.44"

axum = "0.8.8"
maud = { version = "0.27.0", features = ["axum"] }
tower-http = { version = "0.6.8", features = ["fs"] }
maud_extensions = { path = "../maud_extensions" }

tower-livereload = "0.10.1"
