[package]
name = "http"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app" }
domain = { path = "../domain" }
serde = { version = "1.0.228", features = ["derive"] }
derive_more = "2.1.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.19"
axum-login = "0.18.0"
tower-sessions = { version = "0.14.0", features = ["private"] }
time = "0.3.44"

axum = "0.8.8"
maud = { version = "0.27.0", features = ["axum"] }
tower-http = { version = "0.6.8", features = ["fs", "request-id", "trace"] }
maud-extensions = "0.1.2"
secrecy = "0.10.3"

jiff = "0.2.17"
tower-livereload = { version = "0.10.1", optional = true }
datastar = { version = "0.3.1", features = ["axum"] }
async-stream = "0.3.6"
tokio = { version = "1", features = ["sync", "time"] }
dashmap = "6.1.0"
uuid = { version = "1.12.1", features = ["v4"] }
tower-cookies = { version = "0.11.0", features = ["signed"] }
moddef = { workspace = true }
tower = "0.5.2"
serde_json = "1.0.140"
tokio-util = "0.7.13"
bon = "3.8.2"
urlencoding = "2.1.3"
nutype = { workspace = true, features = ["serde"] }
strum = { workspace = true }
strum_macros = { workspace = true }

[dev-dependencies]
async-trait = "0.1.86"
tower-sessions = { version = "0.14.0", features = ["memory-store"] }
domain = { path = "../domain" }

[features]
live-reload = ["tower-livereload"]
