[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }

derive_more = { version = "2.1.0", features = ["from"] }
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "migrate",
] }
utils = { path = "../utils" }
reqwest = { version = "0.13.1", features = ["json"] }
tracing = "0.1.44"
