[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
app = { path = "../app" }

derive_more = { version = "2.1.0", features = ["from"] }
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "migrate",
  "uuid",
] }
utils = { path = "../utils" }
reqwest = { version = "0.13.1", features = ["json"] }
tracing = "0.1.44"
argon2 = "0.5.3"
password-hash = "0.5.0"
rand_core = "0.6.4"
async-trait = "0.1.86"
uuid = { version = "1.12.1", features = ["v4"] }
bon = "3.8.2"
serde_json = "1.0.139"
